--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
     "element-ui": "^2.14.1",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.9.0",
     "mathjs": "^10.5.3",
     "nanoid": "^4.0.0",
+    "quill": "^1.3.7",
+    "quill-cursors": "^4.0.2",
+    "vditor": "^3.9.4",
     "vue": "^2.6.14",
+    "vue-at": "^2.5.1",
     "vue-echarts": "^6.5.4",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue2-editor": "^2.10.3",
+    "vuex": "^3.6.2",
+    "y-quill": "^0.1.5",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
