--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "html-to-image": "^1.9.0",
     "mathjs": "^10.5.3",
     "nanoid": "^4.0.0",
+    "textarea-caret": "^3.1.0",
     "vue": "^2.6.14",
+    "vue-at": "^2.5.1",
     "vue-echarts": "^6.5.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
