--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@luxdamore/vue-css-doodle": "^1.0.1",
     "ace-builds": "^1.12.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
@@ -19,8 +20,8 @@
     "nanoid": "^4.0.0",
     "quill": "^1.3.7",
     "quill-cursors": "^4.0.2",
-    "vditor": "^3.9.4",
     "textarea-caret": "^3.1.0",
+    "vditor": "^3.9.4",
     "vue": "^2.6.14",
     "vue-at": "^2.5.1",
     "vue-echarts": "^6.5.4",
@@ -52,9 +53,9 @@
     "postcss-scss": "^4.0.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "stylelint": "^14.9.1",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard-scss": "^5.0.0",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
