--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
     "ace-builds": "^1.12.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "delta-markdown-for-quill": "^0.0.9",
+    "docxtemplater": "^3.38.0",
     "echarts": "^5.4.1",
     "element-ui": "^2.14.1",
     "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "html-to-image": "^1.9.0",
+    "html2pdf.js": "^0.10.1",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "mathjs": "^10.5.3",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "quill": "^1.3.7",
     "quill-cursors": "^4.0.2",
+    "quill-delta-to-html": "^0.12.1",
+    "quilljs-renderer": "^0.0.8",
+    "showdown": "^2.1.0",
     "textarea-caret": "^3.1.0",
+    "turndown": "^7.1.2",
     "vditor": "^3.9.4",
     "vue": "^2.6.14",
     "vue-at": "^2.5.1",
@@ -47,6 +58,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "html-loader": "^4.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^11.0.0",
     "postcss-html": "^1.5.0",
