--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@luxdamore/vue-css-doodle": "^1.0.1",
     "ace-builds": "^1.12.3",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "delta-markdown-for-quill": "^0.0.9",
